2003-07-23  Bob Wilson  <bob.wilson@acm.org>

	* elf32-xtensa.c (plt_reloc_count): Fix typo in comment.
	(elf_xtensa_size_dynamic_sections): Use elf_discarded_section.
	(elf_xtensa_combine_prop_entries): Avoid returning non-zero without
	first printing an error message.
	(elf_xtensa_finish_dynamic_sections): Likewise.
	(elf_xtensa_discard_info_for_section): Adjust size of .got.loc when
	discarding literal table entries.
	(elf_xtensa_merge_private_bfd_data): Remove newline from error message.
	(elf_xtensa_do_asm_simplify): Likewise.

2003-07-23  Stephane Carrez  <stcarrez@nerim.fr>

	* elf32-m68hc1x.c (elf32_m68hc11_size_stubs): Avoid crash when
	we have a local symbol in common section.

2003-07-22  H.J. Lu <hongjiu.lu@intel.com>

	* elflink.c (_bfd_elf_dynamic_symbol_p): Don't return TRUE for
	weak symbols.

2003-07-22  Nick Clifton  <nickc@redhat.com>

	* coffcode.h (coff_slurp_symbol_table): Add C_TCSYM and C_ECOML to
	expected RS6000 storage classes.

2003-07-21  H.J. Lu <hongjiu.lu@intel.com>

	* elfxx-ia64.c (elfNN_ia64_size_dynamic_sections): Mark
	output_bfd unused to silence gcc.

2003-07-21  Nick Clifton  <nickc@redhat.com>

	* po/sv.po: Updated Swedish translation.

2003-07-21  Alan Modra  <amodra@bigpond.net.au>

	* elf-bfd.h (SYMBOL_REFERENCES_LOCAL, SYMBOL_CALLS_LOCAL): Use..
	(_bfd_elf_symbol_refs_local_p): ..this.  Declare.
	* elflink.c (_bfd_elf_symbol_refs_local_p): New function.
	* elf32-i386.c (elf_i386_relocate_section): Remove h NULL test
	now done in _bfd_elf_symbol_refs_local_p.
	* elf32-ppc.c (ppc_elf_relocate_section): Likewise.
	* elf64-ppc.c (ppc64_elf_relocate_section): Likewise.
	* elf64-x86-64.c (elf64_x86_64_relocate_section): Likewise.

2003-07-18  H.J. Lu <hongjiu.lu@intel.com>

	* elflink.c (_bfd_elf_dynamic_symbol_p): Undo the last change.

2003-07-18  H.J. Lu <hongjiu.lu@intel.com>

	* elf-bfd.h (SYMBOL_REFERENCES_LOCAL): Fix a typo.
	(SYMBOL_CALLS_LOCAL): Likewise.

	* elflink.c (_bfd_elf_dynamic_symbol_p): Return TRUE